# Mattermost-to-MS-Teams-Migration

./: .gitignore  README.md  main.py  pyproject.toml  teams.py
mm_data/: emojis.txt
utils/: api.py  classes.py  constants.py  convert_emojis.py  data.py  singleton.py
